2019-02-17  Marc A. Smith  <marc.smith@quantum.com>

	updated SCST to version 3.3.x/r7960 (resolves bug when setting numa_node_id attribute); updated switchtec-kernel driver to new version; added a autoconf script option to disable usage count reporting (no prompt in TUI); resolve build dep for tokyocabinet.chroot; enable loading the Switchtec driver in rc.2

2019-02-14  Marc A. Smith  <marc.smith@quantum.com>

	iso_installer.sh script updates (user must type 'yes' to continue instead of just ENTER)

	install.sh: repeat block device path prompt if an empty value is given (eg, if enter is hit); iso_installer.sh: attempt to log script itself using tee (needs testing)

2019-02-13  Marc A. Smith  <marc.smith@quantum.com>

	install.sh: bail on any error with set -e; initramfs_init: don't start rc.mdraid and rc.lvm2 when using the ESOS ISO; iso_installer.sh: bail on any error, and run bash if failure occurs on select scripts

	rc.0: updates to handle the ESOS ISO (don't attempt to do things that we can't when booting off the ISO); rc.2: disable loading the Switchtec module at boot (for now); initramfs_init: don't start SCST when we're running the ISO; rc.serial: hide output from grep; iso_installer.sh: added a hook for installation extras/customization

2019-02-10  Marc A. Smith  <marc.smith@quantum.com>

	keep the cryptography Python module at version 2.4.2 to avoid printed warnings when using; added the iso_installer.sh script to facilitate installing ESOS from an ISO; updated init/rc scripts to handle the ESOS ISO properly; updated the install.sh script for ESOS ISO

2019-02-08  Marc A. Smith  <marc.smith@quantum.com>

	clean the *.iso file

	updated the initramfs script and install.sh to support the ESOS ISO

2019-02-07  Marc A. Smith  <marc.smith@quantum.com>

	Python.chroot: install paramiko via pip3 (and deps)

2019-02-06  Marc A. Smith  <marc.smith@quantum.com>
