@@ -1,4 +1,4 @@
-ESOS Professional End User License Agreement (EULA)
+ESOS End User License Agreement (EULA)
 
 CAREFULLY READ THE FOLLOWING LICENSE AGREEMENT. YOU ACCEPT AND AGREE TO 
 BE BOUND BY THIS LICENSE AGREEMENT BY TYPING "YES" ON THE INPUT LINE 
@@ -7,10 +7,9 @@ INSTALLATION WILL BE CANCELED, THE SOFTWARE WILL NOT BE INSTALLED AND
 YOU WILL BE ENTITLED TO A FULL REFUND.
 
 1. License Grant
-"Software" means the computer program you are installing, ESOS 
-Professional. "You" means the person or company who is being licensed 
-to use the Software or Documentation. "We," "us" and "our" means 
-Parodyne Inc.
+"Software" means the computer program you are installing, ESOS. "You" 
+means the person or company who is being licensed to use the Software 
+or Documentation. "We," "us" and "our" means Quantum Corp.
 We hereby grant you a nonexclusive license to use one copy of the 
 Software on any single computer, provided the Software is in use on 
 only one computer at any time. The Software is "in use" on a computer 
@@ -120,7 +119,7 @@ signed by you and us.
 Software or Documentation, the prevailing party in the litigation will 
 be entitled to recover attorney fees and expenses from the other party.
 	4) This license agreement is governed by the laws of the State 
-of Michigan.
+of Delaware.
 	5) You agree that the Software will not be shipped, transferred 
 or exported into any country or used in any manner prohibited by the 
 United States Export Administration Act or any other export laws, 
